--- a/app/src/main/res/layout/activity_salesman_dashboard.xml
+++ b/app/src/main/res/layout/activity_salesman_dashboard.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/lightgreen"
     android:layout_height="match_parent"
-    tools:context=".WelcomeUI.Activity.Splash">
+    tools:context=".salesman.UI.Activity.SalesmanDashboard">
 
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo_aen"
+        android:text="Salesman Dashboard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
