--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,68 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/lightgreen"
     android:orientation="vertical"
-    tools:context=".UI.Activity.Login">
+    tools:context=".WelcomeUI.Activity.Login">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:cardBackgroundColor="@color/lightgreen"
-        app:cardCornerRadius="@dimen/sd12"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/sd20"
+
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_logo_aen" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginVertical="@dimen/sd12"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/sd20">
+            android:text="Welcome"
+            android:textColor="@color/darkgreen"
+            android:textSize="@dimen/sd30"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/ic_logo_aen" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Welcome"
-                android:gravity="center"
-                android:textColor="@color/darkgreen"
-                android:layout_marginVertical="@dimen/sd12"
-                android:textSize="@dimen/sd26"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Login to your Account"
-                android:textColor="#109770"
-                android:textSize="@dimen/sd12"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Login to your Account"
+            android:textColor="#109770"
+            android:textSize="@dimen/sd12"
+            android:textStyle="bold" />
 
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/curvedbg"
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/sd20"
-        android:paddingVertical="@dimen/sd26"
+        android:paddingVertical="@dimen/sd30"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +81,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_mail"
             android:hint="Email Address"
+            android:id="@+id/emailEditText"
             android:layout_marginTop="@dimen/sd4"
             android:paddingVertical="@dimen/sd4"
             android:background="@drawable/loginedittextbg"
@@ -105,7 +101,7 @@
             android:drawableEnd="@drawable/ic_padlock"
             android:hint="***********"
             android:layout_marginTop="@dimen/sd4"
-
+            android:id="@+id/passwordEditText"
             android:background="@drawable/loginedittextbg"
             android:padding="@dimen/sd12" />
 
@@ -125,6 +121,7 @@
             android:paddingHorizontal="@dimen/sd20"
             android:text="select what you are"
             android:textColor="@color/black"
+            android:layout_marginTop="@dimen/sd10"
             android:textSize="@dimen/sd12"
              />
 
