--- a/app/src/main/res/layout/activity_salesman_dashboard.xml
+++ b/app/src/main/res/layout/activity_salesman_dashboard.xml
@@ -4,16 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".salesman.UI.Activity.SalesmanDashboard">
+    android:background="@color/lightgreen"
+    android:orientation="vertical"
+    tools:context="com.aenatural.aenaturals.salesmans.SalesmanDashboard">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <include
+        layout="@layout/topbar_salesmandashboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Salesman Dashboard"
+        android:layout_marginHorizontal="@dimen/sd20"
+        android:layout_marginVertical="@dimen/sd12"
+        android:background="@drawable/bottomnavbg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:menu="@menu/salesmanmenu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
