--- a/app/src/main/res/layout/topbar_salesmandashboard.xml
+++ b/app/src/main/res/layout/topbar_salesmandashboard.xml
@@ -21,12 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5"
             >
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_notification"
-                android:layout_marginRight="5dp"
-                />
+
             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
@@ -56,7 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="Logout" />
+                android:textSize="@dimen/sd10"
+                android:text="logout" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
