--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,108 +4,134 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightgreen"
-    android:orientation="vertical"
-    tools:context=".WelcomeUI.Activity.Login">
+    android:orientation="vertical">
 
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/sd20"
-
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ic_logo_aen" />
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/sd12"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/homecard_bg"
             android:gravity="center"
-            android:text="Welcome"
-            android:textColor="@color/darkgreen"
-            android:textSize="@dimen/sd30"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Login to your Account"
-            android:textColor="#109770"
-            android:textSize="@dimen/sd12"
-            android:textStyle="bold" />
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="20dp"
+                android:src="@drawable/ic_logo_aen" />
 
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/curvedbg"
-        android:orientation="vertical"
-        android:paddingHorizontal="@dimen/sd20"
-        android:paddingVertical="@dimen/sd30"
-
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="20dp"
+        android:elevation="20dp"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
 
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="email-id"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/sd10" />
-
-        <EditText
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_mail"
-            android:hint="Email Address"
-            android:id="@+id/emailEditText"
-            android:layout_marginTop="@dimen/sd4"
-            android:paddingVertical="@dimen/sd4"
-            android:background="@drawable/loginedittextbg"
-            android:padding="@dimen/sd12" />
+            android:background="@drawable/curvedbg"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/sd20"
+            android:paddingVertical="@dimen/sd30"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="password"
-            android:layout_marginTop="@dimen/sd20"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/sd10" />
+            >
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_padlock"
-            android:hint="***********"
-            android:layout_marginTop="@dimen/sd4"
-            android:id="@+id/passwordEditText"
-            android:background="@drawable/loginedittextbg"
-            android:padding="@dimen/sd12" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Login"
+                android:textColor="@color/darkgreen"
+                android:textSize="@dimen/sd30"
+                android:textStyle="bold" />
 
-        <TextView
+           <!-- <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Login to your Account"
+                android:textColor="#109770"
+                android:textSize="@dimen/sd12"
+                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="email-id"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/sd10" />
+
+            <EditText
+                android:id="@+id/emailEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sd4"
+                android:background="@drawable/loginedittextbg"
+                android:drawableEnd="@drawable/ic_mail"
+                android:hint="Email Address"
+                android:padding="@dimen/sd12"
+                android:paddingVertical="@dimen/sd4" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sd20"
+                android:text="password"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/sd10" />
+
+            <EditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sd4"
+                android:background="@drawable/loginedittextbg"
+                android:drawableEnd="@drawable/ic_padlock"
+                android:hint="***********"
+                android:padding="@dimen/sd12" />
+
+
+            <TextView
+                android:id="@+id/tv_login"
+                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:paddingHorizontal="35dp"
+                android:paddingVertical="10dp"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sd14"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button_round_bg_darkgreen"
+                android:text="Login"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                />
+
+
+            <!--   <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/sd20"
@@ -125,7 +151,7 @@
             android:textSize="@dimen/sd12"
              />
 
-        <include layout="@layout/layout_prelogin" />
-    </LinearLayout>
-
+        <include layout="@layout/layout_prelogin" />-->
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
