--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.aenatural.aenaturals.common.WelcomeScreen">
 
     <!--<LinearLayout
@@ -59,6 +58,7 @@
         app:layout_constraintBottom_toTopOf="@+id/viewCenterOfNext"
         app:layout_constraintTop_toTopOf="parent"
         />
+
     <LinearLayout
         android:id="@+id/indicatorsContainer"
         android:layout_width="wrap_content"
@@ -102,8 +102,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/image_next"
         app:layout_constraintEnd_toEndOf="@+id/image_next"
         app:layout_constraintStart_toStartOf="@+id/image_next"
-        app:layout_constraintTop_toTopOf="@+id/image_next"
-        />
+        app:layout_constraintTop_toTopOf="@+id/image_next" />
 
     <ImageView
         android:id="@+id/image_next"
@@ -117,8 +116,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
-
-
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/start"
