--- a/app/src/main/res/layout/midsectionsalesmandashboard.xml
+++ b/app/src/main/res/layout/midsectionsalesmandashboard.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/midgreen"
-        android:text="Retailers"
+        android:id="@+id/addCustomers"
+        android:text="Recent Customers"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingVertical="6dp"
