--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightgreen">#E8F5E9</color>
-    <color name="midgreen">#C4E8C6</color>
+    <color name="midgreen">#AFE1B1</color>
     <color name="darkgreen">#0C805F</color>
     <color name="gray">#545E5E</color>
     <color name="lightblue">#46A8F6</color>
