--- a/app/src/main/res/layout/adapterrequestproductsalesman.xml
+++ b/app/src/main/res/layout/adapterrequestproductsalesman.xml
@@ -16,7 +16,7 @@
             android:layout_width="100dp"
             android:layout_height="90dp"
             android:layout_marginBottom="7dp"
-            android:src="@drawable/ic_products"
+            android:src="@drawable/ic_box"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -56,13 +56,36 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/sd10" />
 
-            <TextView
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/sd6"
-                android:text="Quantity"
-                android:textColor="@color/black"
-                android:textSize="@dimen/sd10" />
+                android:gravity="right"
+                android:padding="5dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_removegreen"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+
+                    android:gravity="center"
+                    android:paddingVertical="@dimen/sd10"
+                    android:paddingHorizontal="@dimen/sd14"
+                    android:layout_marginHorizontal="@dimen/sd4"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/darkgreen"
+                    android:textStyle="bold"
+                    android:background="@drawable/loginedittextbg"
+                    android:text="quantity:0"/>
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_plus"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
