--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context="com.aenatural.aenaturals.salesmans.fragments.ProductsFragment">
 
@@ -18,7 +19,27 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:id="@+id/allproductsrecyclerview"
         />
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/midgreen"
+        android:layout_marginVertical="@dimen/sd8"
+        android:layout_marginHorizontal="@dimen/sd14"
+        app:cardCornerRadius="@dimen/sd12"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add to cart"
+            android:textSize="@dimen/sd14"
+            android:drawableEnd="@drawable/ic_baseline_add_shopping_cart_24"
+            android:textStyle="bold"
+            android:textColor="@color/darkgreen"
+            android:gravity="center"
+            android:padding="@dimen/sd10"
+            />
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
