--- a/app/src/main/res/layout/fragment_request_products.xml
+++ b/app/src/main/res/layout/fragment_request_products.xml
@@ -1,17 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/lightgreen"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.aenatural.aenaturals.salesmans.fragments.RequestProducts">
 
-<ImageView
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:src="@drawable/ic_logo_aen"
-    android:layout_margin="@dimen/sd14"
-    />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +20,29 @@
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_margin="@dimen/sd6"
+    android:layout_weight="1"
     android:layout_height="match_parent"
     android:id="@+id/recyclerViewRequestProducts"
     />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/requestproductscheckout"
+        android:backgroundTint="@color/midgreen"
+        android:layout_marginVertical="@dimen/sd8"
+        android:layout_marginHorizontal="@dimen/sd14"
+        app:cardCornerRadius="@dimen/sd12"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add to cart"
+            android:textSize="@dimen/sd14"
+            android:drawableEnd="@drawable/ic_baseline_add_shopping_cart_24"
+            android:textStyle="bold"
+            android:textColor="@color/darkgreen"
+            android:gravity="center"
+            android:padding="@dimen/sd10"
+            />
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
