--- a/app/src/main/res/layout/adapterallproductsdesign.xml
+++ b/app/src/main/res/layout/adapterallproductsdesign.xml
@@ -71,12 +71,13 @@
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="30dp"
+                    android:id="@+id/minusallproducts"
                     android:layout_height="30dp"
                     android:src="@drawable/ic_removegreen"
                     />
                 <TextView
                     android:layout_width="wrap_content"
-
+android:id="@+id/allproductsquantity"
                     android:gravity="center"
                     android:paddingVertical="@dimen/sd10"
                     android:paddingHorizontal="@dimen/sd14"
@@ -89,6 +90,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:id="@+id/addallproducts"
                     android:src="@drawable/ic_plus"
                     />
             </LinearLayout>
