--- a/app/src/main/res/layout/activity_salesman_profile.xml
+++ b/app/src/main/res/layout/activity_salesman_profile.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightgreen"
-
     tools:context="com.aenatural.aenaturals.salesmans.SalesmanProfileActivity">
 
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/midgreen"
         android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
-
         android:gravity="center"
         android:padding="@dimen/sd14"
         android:text="Your Profile"
@@ -34,8 +33,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:gravity="center"
+    android:orientation="vertical">
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -80,7 +84,7 @@
             android:textColor="@color/darkgreen"
             android:textSize="@dimen/sd12"
             android:textStyle="bold" />
-
+    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -213,16 +217,46 @@
     <LinearLayout
         android:id="@+id/linearLayout10"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/midgreen"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" more "
+                android:layout_marginHorizontal="@dimen/sd4"
+                android:gravity="center"
+                android:textSize="@dimen/sd12"
+                android:textColor="@color/darkgreen"
+                android:textStyle="bold"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+
+                android:background="@color/midgreen"
+                android:layout_weight="1"
+                />
+
+        </LinearLayout>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/requestproductscheckout"
             android:backgroundTint="@color/midgreen"
             android:layout_marginVertical="@dimen/sd8"
             android:layout_marginHorizontal="@dimen/sd14"
@@ -233,9 +267,51 @@
                 android:layout_height="wrap_content"
                 android:text="Customer Care"
                 android:textSize="@dimen/sd14"
-                android:drawableEnd="@drawable/ic_baseline_add_shopping_cart_24"
+                android:drawableEnd="@drawable/ic_supportdarkgreen"
                 android:textStyle="bold"
                 android:textColor="@color/darkgreen"
+                android:gravity="center"
+                android:padding="@dimen/sd10"
+                />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/midgreen"
+            android:layout_marginVertical="@dimen/sd8"
+            android:layout_marginHorizontal="@dimen/sd14"
+            app:cardCornerRadius="@dimen/sd12"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_baseline_text_snippet_24"
+                android:gravity="center"
+                android:padding="@dimen/sd10"
+                android:text="Privacy Policy"
+                android:textColor="@color/darkgreen"
+                android:textSize="@dimen/sd14"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/midgreen"
+            android:layout_marginVertical="@dimen/sd8"
+            android:layout_marginHorizontal="@dimen/sd14"
+            app:cardCornerRadius="@dimen/sd12"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Logout"
+                android:textSize="@dimen/sd14"
+                android:drawableEnd="@drawable/ic_logout_darkgreen"
+                android:textStyle="bold"
+                android:textColor="@color/lightred"
                 android:gravity="center"
                 android:padding="@dimen/sd10"
                 />
