--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightgreen">#E8F5E9</color>
+    <color name="lightgreen2">#DBFBDE</color>
     <color name="midgreen">#AFE1B1</color>
     <color name="darkgreen">#0C805F</color>
     <color name="gray">#545E5E</color>
     <color name="lightblue">#46A8F6</color>
+    <color name="red">#FA2C2C</color>
+    <color name="lightred">#DD4545</color>
 
 </resources>
