--- a/app/src/main/res/layout/activity_customer_registration.xml
+++ b/app/src/main/res/layout/activity_customer_registration.xml
@@ -12,8 +12,8 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginVertical="@dimen/sd30"
+        android:layout_height="70dp"
+        android:layout_marginVertical="@dimen/sd20"
         android:layout_marginStart="20dp"
         android:src="@drawable/ic_logo_aen"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,9 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
 
-        android:layout_marginTop="@dimen/sd30"
+        android:layout_marginTop="@dimen/sd6"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/cardView3"
+        app:layout_constraintBottom_toTopOf="@+id/customerFormSubmit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,6 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             app:cardCornerRadius="@dimen/sd10">
 
             <LinearLayout
@@ -62,8 +61,8 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:src="@drawable/ic_addform" />
                 </LinearLayout>
 
@@ -150,18 +149,18 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="100dp"
                         android:id="@+id/genderMale"
+                        android:layout_width="70dp"
+                        android:layout_height="90dp"
                         android:layout_marginHorizontal="@dimen/sd6"
                         android:layout_weight="1"
                         android:background="@drawable/loginedittextbg"
                         android:src="@drawable/ic_userm" />
 
                     <ImageView
-                        android:layout_width="80dp"
                         android:id="@+id/genderFemale"
-                        android:layout_height="100dp"
+                        android:layout_width="70dp"
+                        android:layout_height="90dp"
                         android:layout_marginHorizontal="@dimen/sd6"
                         android:layout_weight="1"
                         android:background="@drawable/loginedittextbg"
