--- a/app/src/main/res/layout/activity_salesman_profile.xml
+++ b/app/src/main/res/layout/activity_salesman_profile.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    >
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightgreen"
@@ -9,16 +15,16 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/backTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/midgreen"
         android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
         android:gravity="center"
-        android:padding="@dimen/sd14"
+        android:padding="@dimen/sd10"
         android:text="Your Profile"
         android:textColor="@color/darkgreen"
-        android:textSize="@dimen/sd20"
+        android:textSize="@dimen/sd16"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/backTV">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,8 +47,8 @@
     android:gravity="center"
     android:orientation="vertical">
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:src="@drawable/ic_account_placeholder" />
 
         <TextView
@@ -52,7 +58,7 @@
             android:gravity="center"
             android:text="Rajesh G"
             android:textColor="@color/darkgreen"
-            android:textSize="@dimen/sd18"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -266,12 +272,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Customer Care"
-                android:textSize="@dimen/sd14"
+                android:textSize="@dimen/sd12"
                 android:drawableEnd="@drawable/ic_supportdarkgreen"
                 android:textStyle="bold"
                 android:textColor="@color/darkgreen"
                 android:gravity="center"
-                android:padding="@dimen/sd10"
+                android:padding="@dimen/sd8"
                 />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -288,10 +294,10 @@
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/ic_baseline_text_snippet_24"
                 android:gravity="center"
-                android:padding="@dimen/sd10"
+                android:padding="@dimen/sd8"
                 android:text="Privacy Policy"
                 android:textColor="@color/darkgreen"
-                android:textSize="@dimen/sd14"
+                android:textSize="@dimen/sd12"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
@@ -308,14 +314,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Logout"
-                android:textSize="@dimen/sd14"
+                android:id="@+id/salesmanLogout"
+                android:textSize="@dimen/sd12"
                 android:drawableEnd="@drawable/ic_logout_darkgreen"
                 android:textStyle="bold"
                 android:textColor="@color/lightred"
                 android:gravity="center"
-                android:padding="@dimen/sd10"
+                android:padding="@dimen/sd8"
                 />
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
