--- a/app/src/main/res/layout/privacypolicylayout.xml
+++ b/app/src/main/res/layout/privacypolicylayout.xml
@@ -20,8 +20,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/sd6"
         android:text="@string/privacy_policy"
-        android:textColor="@color/midgreen"
+        android:textColor="@color/darkgreen"
         android:textSize="@dimen/sd14"
         />
 
