--- a/app/src/main/res/drawable-v24/homecard_bg.xml
+++ b/app/src/main/res/drawable-v24/homecard_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D9FBDC"/>
+    <solid android:color="@color/midgreen"/>
 
 <size android:width="200dp"
     android:height="200dp"/>
