--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -79,7 +79,7 @@
         android:layout_marginEnd="20dp"
         android:text="Skip"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:textColor="@color/darkgreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textAllCaps="false"
@@ -128,7 +128,7 @@
         android:textAllCaps="false"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:backgroundTint="@color/darkgreen"
+        android:backgroundTint="@color/midgreen"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
