--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,69 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightgreen"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:paddingVertical="@dimen/sd24"
             android:background="@drawable/homecard_bg"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:gravity="left"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_margin="20dp"
                 android:src="@drawable/ic_logo_aen" />
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="130dp"
-        android:elevation="20dp"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/curvedbg"
-            android:orientation="vertical"
-            android:paddingHorizontal="@dimen/sd20"
-            android:paddingVertical="@dimen/sd30"
-
-            >
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="Hello again,"
                 android:textColor="@color/gray"
+                android:layout_marginHorizontal="20dp"
                 android:textSize="@dimen/sd16"
                 android:textStyle="bold" />
             <TextView
@@ -74,32 +41,73 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="Welcome"
+                android:layout_marginVertical="@dimen/sd6"
+                android:layout_marginHorizontal="20dp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sd20"
                 android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="@dimen/sd6"
+        android:backgroundTint="@color/white"
+        android:elevation="20dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/sd20"
+            android:paddingVertical="@dimen/sd20"
+
+            >
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginVertical="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Login"
-                    android:textColor="@color/darkgreen"
-                    android:textSize="@dimen/sd30"
-                    android:textStyle="bold" />
+                    android:layout_gravity="start"
+                    android:layout_marginVertical="15dp"
+                    android:orientation="vertical">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/darkgreen" />
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Login"
+                        android:textColor="@color/darkgreen"
+                        android:textSize="@dimen/sd30"
+                        android:textStyle="bold" />
 
-            <!-- <TextView
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/darkgreen" />
+                </LinearLayout>
+
+                <!-- <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,69 +116,106 @@
                 android:textColor="#109770"
                 android:textSize="@dimen/sd12"
                 android:textStyle="bold" />-->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Email"
-                android:textColor="@color/gray"
-                android:textSize="@dimen/sd10" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Email"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/sd10" />
 
-            <EditText
-                android:id="@+id/emailEditText"
+                <EditText
+                    android:id="@+id/emailEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/sd4"
+                    android:background="@drawable/loginedittextbg"
+                    android:drawableEnd="@drawable/ic_mail"
+                    android:hint="abc@gmail.com"
+                    android:padding="@dimen/sd12"
+                    android:paddingVertical="@dimen/sd4" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/sd20"
+                    android:text="Password"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/sd10" />
+
+                <EditText
+                    android:id="@+id/passwordEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/sd4"
+                    android:background="@drawable/loginedittextbg"
+                    android:drawableEnd="@drawable/ic_padlock"
+                    android:hint="***********"
+                    android:padding="@dimen/sd12" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="end"
+                    android:text="Forgot Password?"
+                    android:textColor="@color/lightblue"
+                    android:textSize="@dimen/sd14"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/button_round_bg_darkgreen"
+                    android:drawableRight="@drawable/ic_arrow_forward_white"
+                    android:gravity="center"
+                    android:paddingHorizontal="30dp"
+                    android:paddingVertical="12dp"
+                    android:text="Login"
+                    android:textAllCaps="true"
+                    android:textColor="@color/darkgreen"
+                    android:textSize="@dimen/sd16"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sd4"
-                android:background="@drawable/loginedittextbg"
-                android:drawableEnd="@drawable/ic_mail"
-                android:hint="abc@gmail.com"
-                android:padding="@dimen/sd12"
-                android:paddingVertical="@dimen/sd4" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sd20"
-                android:text="Password"
-                android:textColor="@color/gray"
-                android:textSize="@dimen/sd10" />
-
-            <EditText
-                android:id="@+id/passwordEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sd4"
-                android:background="@drawable/loginedittextbg"
-                android:drawableEnd="@drawable/ic_padlock"
-                android:hint="***********"
-                android:padding="@dimen/sd12" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="end"
-                android:text="Forgot Password?"
-                android:textColor="@color/lightblue"
-                android:textSize="@dimen/sd14"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tv_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/button_round_bg_darkgreen"
-                android:drawableRight="@drawable/ic_arrow_forward_white"
+                android:layout_marginHorizontal="@dimen/sd6"
                 android:gravity="center"
-                android:paddingHorizontal="35dp"
-                android:paddingVertical="10dp"
-                android:text="Login"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sd16"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_weight="1"
+                    android:background="@color/darkgreen" />
+
+                <ImageView
+                    android:layout_width="@dimen/sd30"
+                    android:layout_height="@dimen/sd30"
+                    android:layout_margin="@dimen/sd6"
+                    android:src="@drawable/ic_logo_aen" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_weight="1"
+                    android:background="@color/darkgreen" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/sd2"
+                android:gravity="center"
+                android:padding="@dimen/sd10"
+
+                android:textSize="@dimen/sd12" />
 
 
             <!--   <TextView
@@ -197,17 +242,6 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/sd12"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
