--- a/app/src/main/res/layout/activity_salesman_dashboard.xml
+++ b/app/src/main/res/layout/activity_salesman_dashboard.xml
@@ -10,25 +10,10 @@
 
     <include
         android:id="@+id/include2"
-        layout="@layout/header_layout"
+        layout="@layout/topbar_salesmandashboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/sd10"
-        android:layout_marginVertical="@dimen/sd8"
-        android:background="@drawable/searchbg"
-        android:drawableEnd="@drawable/ic_searchglossy"
-        android:hint="search in products,orders"
-        android:padding="@dimen/sd8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2"
-        tools:ignore="TouchTargetSizeCheck" />
 
     <FrameLayout
         android:id="@+id/salesDashboardFrameLayout"
@@ -38,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/include2" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
