--- a/app/src/main/res/layout/topbar_salesmandashboard.xml
+++ b/app/src/main/res/layout/topbar_salesmandashboard.xml
@@ -38,7 +38,7 @@
             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:id="@+id/driverProfileIcon"
+                android:id="@+id/profileicon"
                 android:src="@drawable/ic_account_placeholder" />
 
             <TextView
